chore: corrigido duration

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "sobremim",
-    "slug": "sobremim",
+    "slug": "projeto-final",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -24,10 +24,17 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.pdiegoneves.projetofinal"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "cc1b4530-3b7c-4e09-b6ed-415910558b55"
+      }
+    },
+    "owner": "pdiegoneves"
   }
 }
